--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/dist/bcrypt.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
     <script src="auth.js"></script>
