--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bcryptjs@2.4.3/dist/bcrypt.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js"></script>
-    <script src="auth.js"></script>
+    <script src="script.js" defer></script>
+    <script src="auth.js" defer></script>
 </body>
 </html>
