--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="createStudentPassword">Senha:</label>
-                                    <input type="password" id="createStudentPassword" required>
+                                    <input type="password" id="createStudentPassword" required autocomplete="new-password">
                                 </div>
                             </div>
                             <div class="form-actions">
