--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                 <form id="teacherLoginForm" class="login-form">
                     <div class="form-group">
                         <label for="teacherEmail">Email:</label>
-                        <input type="email" id="teacherEmail" required>
+                        <input type="email" id="teacherEmail" required autocomplete="username">
                     </div>
                     <div class="form-group">
                         <label for="teacherPassword">Senha:</label>
-                        <input type="password" id="teacherPassword" required>
+                        <input type="password" id="teacherPassword" required autocomplete="current-password">
                     </div>
                     <button type="submit" class="login-btn">Entrar</button>
                     <button type="button" class="register-btn" onclick="showTeacherRegister()">Não tenho conta</button>
@@ -64,15 +64,15 @@
                 <form id="teacherRegisterForm" class="login-form">
                     <div class="form-group">
                         <label for="teacherRegName">Nome:</label>
-                        <input type="text" id="teacherRegName" required>
+                        <input type="text" id="teacherRegName" required autocomplete="name">
                     </div>
                     <div class="form-group">
                         <label for="teacherRegEmail">Email:</label>
-                        <input type="email" id="teacherRegEmail" required>
+                        <input type="email" id="teacherRegEmail" required autocomplete="email">
                     </div>
                     <div class="form-group">
                         <label for="teacherRegPassword">Senha:</label>
-                        <input type="password" id="teacherRegPassword" required>
+                        <input type="password" id="teacherRegPassword" required autocomplete="new-password">
                     </div>
                     <button type="submit" class="login-btn">Cadastrar</button>
                     <button type="button" class="register-btn" onclick="showTeacherLogin()">Já tenho conta</button>
@@ -91,11 +91,11 @@
                 <form id="studentLoginForm" class="login-form">
                     <div class="form-group">
                         <label for="studentUsername">Nome de usuário:</label>
-                        <input type="text" id="studentUsername" required>
+                        <input type="text" id="studentUsername" required autocomplete="username">
                     </div>
                     <div class="form-group">
                         <label for="studentPassword">Senha:</label>
-                        <input type="password" id="studentPassword" required>
+                        <input type="password" id="studentPassword" required autocomplete="current-password">
                     </div>
                     <button type="submit" class="login-btn">Entrar</button>
                 </form>
@@ -223,7 +223,7 @@
             </div>
 
             <div class="letters-grid" id="lettersGrid">
-                </div>
+            </div>
 
             <div class="game-controls">
                 <button id="repeatAudio" class="control-button">
@@ -325,7 +325,7 @@
                                 
                                 <div class="form-group">
                                     <label for="createStudentUsername">Usuário:</label>
-                                    <input type="text" id="createStudentUsername" required>
+                                    <input type="text" id="createStudentUsername" required autocomplete="username">
                                 </div>
                                 <div class="form-group">
                                     <label for="createStudentPassword">Senha:</label>
@@ -340,7 +340,7 @@
                     </div>
 
                     <div id="studentsList" class="students-list">
-                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -348,7 +348,7 @@
                 <div class="progress-section">
                     <h4>Relatório de Progresso da Turma</h4>
                     <div id="classProgressChart" class="progress-chart">
-                        </div>
+                    </div>
                 </div>
             </div>
 
