--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
 
             <div class="letters-grid" id="lettersGrid">
-            </div>
+                </div>
 
             <div class="game-controls">
                 <button id="repeatAudio" class="control-button">
@@ -333,14 +333,14 @@
                                 </div>
                             </div>
                             <div class="form-actions">
-                                <button type="submit" class="btn primary">Criar Aluno</button>
+                                <button type="button" id="createStudentSubmitBtn" class="btn primary">Criar Aluno</button>
                                 <button type="button" onclick="hideCreateStudentForm()" class="btn">Cancelar</button>
                             </div>
                         </form>
                     </div>
 
                     <div id="studentsList" class="students-list">
-                    </div>
+                        </div>
                 </div>
             </div>
 
@@ -348,7 +348,7 @@
                 <div class="progress-section">
                     <h4>Relatório de Progresso da Turma</h4>
                     <div id="classProgressChart" class="progress-chart">
-                    </div>
+                        </div>
                 </div>
             </div>
 
