--- a/index.html
+++ b/index.html
@@ -117,124 +117,127 @@
                     </button>
                 </div>
             </div>
-
             <div class="dashboard-content">
                 <div class="dashboard-section">
                     <h2>Minhas Turmas</h2>
-                    <button onclick="showCreateClassModal()" class="create-btn">
-                        <i class="fas fa-plus"></i> Criar Nova Turma
-                    </button>
+                    <button onclick="showCreateClassModal()" class="create-btn"><i class="fas fa-plus"></i> Criar Nova Turma</button>
                     <div id="classesList" class="classes-grid"></div>
+                </div>
+                <div class="dashboard-section">
+                    <h2>Configurações</h2>
+                    <button onclick="showAudioSettingsModal()" class="create-btn" style="background-color: #5c6bc0;">
+                        <i class="fas fa-microphone-alt"></i> Gerenciar Áudios das Letras
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 
     <div id="startScreen" class="screen">
-        <div class="container">
-            <div class="game-title">
-                <h1>🌟 Jogo das Letras 🌟</h1>
-                <p>Vamos aprender o alfabeto juntos!</p>
-            </div>
-            <div class="character-mascot">
-                <div class="mascot bounce">
-                    <i class="fas fa-cat"></i>
-                </div>
-                <div class="speech-bubble">
-                    <p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
-                </div>
-            </div>
-            <button id="startButton" class="start-button">
-                <i class="fas fa-play"></i> Começar Aventura
-            </button>
-        </div>
-    </div>
+ 		<div class="container">
+ 			<div class="game-title">
+ 				<h1>🌟 Jogo das Letras 🌟</h1>
+ 				<p>Vamos aprender o alfabeto juntos!</p>
+ 			</div>
+ 			<div class="character-mascot">
+ 				<div class="mascot bounce">
+ 					<i class="fas fa-cat"></i>
+ 				</div>
+ 				<div class="speech-bubble">
+ 					<p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
+ 				</div>
+ 			</div>
+ 			<button id="startButton" class="start-button">
+ 				<i class="fas fa-play"></i> Começar Aventura
+ 			</button>
+ 		</div>
+ 	</div>
 
-    <div id="gameScreen" class="screen">
-        <div class="game-header">
-            <div class="phase-info">
-                <h2>Fase <span id="currentPhase">1</span></h2>
-                <div class="progress-bar">
-                    <div id="progressFill" class="progress-fill"></div>
-                </div>
-            </div>
-            <div class="score-info">
-                <div class="score">
-                    <i class="fas fa-star"></i>
-                    <span id="score">0</span>/<span id="totalQuestions">0</span>
-                </div>
-                <div class="attempts">
-                    <i class="fas fa-heart"></i>
-                    <span id="attempts">2</span> tentativas
-                </div>
-            </div>
-        </div>
-        <div class="game-content">
-            <div class="question-area">
-                <div class="mascot-helper">
-                    <div class="mascot pulse">
-                        <i class="fas fa-cat"></i>
-                    </div>
-                    <div class="speech-bubble" id="helperText">
-                        Clique no alto-falante para ouvir o som!
-                    </div>
-                </div>
-                <div class="audio-section">
-                    <button id="playAudioButton" class="audio-button">
-                        <i class="fas fa-volume-up"></i>
-                        <span>Ouvir Som</span>
-                    </button>
-                </div>
-                <div class="question-text">
-                    <h3 id="questionText">Qual letra faz este som?</h3>
-                </div>
-            </div>
-            <div class="letters-grid" id="lettersGrid"></div>
-            <div class="game-controls">
-                <button id="repeatAudio" class="control-button">
-                    <i class="fas fa-redo"></i> Ouvir Novamente
-                </button>
-                <button id="nextQuestion" class="control-button" style="display: none;">
-                    <i class="fas fa-arrow-right"></i> Próxima
-                </button>
-            </div>
-        </div>
-    </div>
+ 	<div id="gameScreen" class="screen">
+ 		<div class="game-header">
+ 			<div class="phase-info">
+ 				<h2>Fase <span id="currentPhase">1</span></h2>
+ 				<div class="progress-bar">
+ 					<div id="progressFill" class="progress-fill"></div>
+ 				</div>
+ 			</div>
+ 			<div class="score-info">
+ 				<div class="score">
+ 					<i class="fas fa-star"></i>
+ 					<span id="score">0</span>/<span id="totalQuestions">0</span>
+ 				</div>
+ 				<div class="attempts">
+ 					<i class="fas fa-heart"></i>
+ 					<span id="attempts">2</span> tentativas
+ 				</div>
+ 			</div>
+ 		</div>
+ 		<div class="game-content">
+ 			<div class="question-area">
+ 				<div class="mascot-helper">
+ 					<div class="mascot pulse">
+ 						<i class="fas fa-cat"></i>
+ 					</div>
+ 					<div class="speech-bubble" id="helperText">
+ 						Clique no alto-falante para ouvir o som!
+ 					</div>
+ 				</div>
+ 				<div class="audio-section">
+ 					<button id="playAudioButton" class="audio-button">
+ 						<i class="fas fa-volume-up"></i>
+ 						<span>Ouvir Som</span>
+ 					</button>
+ 				</div>
+ 				<div class="question-text">
+ 					<h3 id="questionText">Qual letra faz este som?</h3>
+ 				</div>
+ 			</div>
+ 			<div class="letters-grid" id="lettersGrid"></div>
+ 			<div class="game-controls">
+ 				<button id="repeatAudio" class="control-button">
+ 					<i class="fas fa-redo"></i> Ouvir Novamente
+ 				</button>
+ 				<button id="nextQuestion" class="control-button" style="display: none;">
+ 					<i class="fas fa-arrow-right"></i> Próxima
+ 				</button>
+ 			</div>
+ 		</div>
+ 	</div>
 
-    <div id="resultScreen" class="screen">
-        <div class="container">
-            <div class="result-content">
-                <div class="result-icon" id="resultIcon">
-                    <i class="fas fa-trophy"></i>
-                </div>
-                <h2 id="resultTitle">Parabéns!</h2>
-                <div class="result-stats">
-                    <div class="stat">
-                        <i class="fas fa-star"></i>
-                        <span>Acertos: <span id="finalScore">0</span></span>
-                    </div>
-                    <div class="stat">
-                        <i class="fas fa-percentage"></i>
-                        <span>Precisão: <span id="accuracy">0</span>%</span>
-                    </div>
-                </div>
-                <div class="result-message" id="resultMessage">
-                    Você conseguiu! Continue assim!
-                </div>
-                <div class="result-actions">
-                    <button id="continueButton" class="result-button success" style="display: none;">
-                        <i class="fas fa-arrow-right"></i> Próxima Fase
-                    </button>
-                    <button id="retryButton" class="result-button retry" style="display: none;">
-                        <i class="fas fa-redo"></i> Tentar Novamente
-                    </button>
-                    <button id="restartButton" class="result-button">
-                        <i class="fas fa-home"></i> Voltar ao Início
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
+ 	<div id="resultScreen" class="screen">
+ 		<div class="container">
+ 			<div class="result-content">
+ 				<div class="result-icon" id="resultIcon">
+ 					<i class="fas fa-trophy"></i>
+ 				</div>
+ 				<h2 id="resultTitle">Parabéns!</h2>
+ 				<div class="result-stats">
+ 					<div class="stat">
+ 						<i class="fas fa-star"></i>
+ 						<span>Acertos: <span id="finalScore">0</span></span>
+ 					</div>
+ 					<div class="stat">
+ 						<i class="fas fa-percentage"></i>
+ 						<span>Precisão: <span id="accuracy">0</span>%</span>
+ 					</div>
+ 				</div>
+ 				<div class="result-message" id="resultMessage">
+ 					Você conseguiu! Continue assim!
+ 				</div>
+ 				<div class="result-actions">
+ 					<button id="continueButton" class="result-button success" style="display: none;">
+ 						<i class="fas fa-arrow-right"></i> Próxima Fase
+ 					</button>
+ 					<button id="retryButton" class="result-button retry" style="display: none;">
+ 						<i class="fas fa-redo"></i> Tentar Novamente
+ 					</button>
+ 					<button id="restartButton" class="result-button">
+ 						<i class="fas fa-home"></i> Voltar ao Início
+ 					</button>
+ 				</div>
+ 			</div>
+ 		</div>
+ 	</div>
 
     <div id="globalFeedback" class="feedback">
         <div class="feedback-content">
@@ -263,16 +266,14 @@
         <div class="modal-content large">
             <h3 id="manageClassTitle">Gerenciar Turma</h3>
             <div class="modal-tabs">
-                <button class="tab-btn active" onclick="showTab('students')">Alunos</button>
-                <button class="tab-btn" onclick="showTab('progress')">Progresso</button>
+                <button class="tab-btn active" onclick="showTab('students', this)">Alunos</button>
+                <button class="tab-btn" onclick="showTab('studentProgress', this)">Progresso dos Alunos</button>
             </div>
             <div id="studentsTab" class="tab-content active">
                 <div class="students-section">
                     <div class="section-header">
                         <h4>Alunos da Turma</h4>
-                        <button onclick="showCreateStudentForm()" class="create-btn small">
-                            <i class="fas fa-plus"></i> Adicionar Aluno
-                        </button>
+                        <button onclick="showCreateStudentForm()" class="create-btn small"><i class="fas fa-plus"></i> Adicionar Aluno</button>
                     </div>
                     <div id="createStudentForm" class="create-form" style="display: none;">
                         <form id="createStudentFormElement">
@@ -295,10 +296,12 @@
                     <div id="studentsList" class="students-list"></div>
                 </div>
             </div>
-            <div id="progressTab" class="tab-content">
+            <div id="studentProgressTab" class="tab-content">
                 <div class="progress-section">
                     <h4>Relatório de Progresso da Turma</h4>
-                    <div id="classProgressChart" class="progress-chart"></div>
+                    <div id="studentProgressList" class="students-list">
+                        <p>Carregando progresso...</p>
+                    </div>
                 </div>
             </div>
             <div class="modal-actions">
@@ -307,7 +310,34 @@
         </div>
     </div>
 
-    <script src="https://unpkg.com/bcryptjs@2.4.3/dist/bcrypt.min.js"></script>
+    <div id="audioSettingsModal" class="modal">
+        <div class="modal-content">
+            <h3>Gerenciar Áudios das Letras</h3>
+            <div class="upload-section">
+                <p>Envie os arquivos de áudio (.mp3, .wav, .m4a) para cada letra do alfabeto.</p>
+                <div class="upload-instructions">
+                    <p><i class="fas fa-info-circle"></i> <strong>Nomeie os arquivos exatamente como a letra.</strong></p>
+                    <ul>
+                        <li>Exemplos: <code>A.mp3</code>, <code>b.wav</code>, <code>C.m4a</code></li>
+                    </ul>
+                </div>
+                <div class="upload-area">
+                    <input type="file" id="audioUpload" accept="audio/*" multiple>
+                    <label for="audioUpload" class="upload-label">
+                        <i class="fas fa-cloud-upload-alt"></i>
+                        <span>Clique para selecionar os arquivos</span>
+                    </label>
+                </div>
+                <div id="uploadStatus"></div>
+                <button id="uploadAudioBtn" class="modal-btn primary">Enviar Áudios</button>
+            </div>
+            <div class="modal-actions">
+                <button type="button" onclick="closeModal('audioSettingsModal')" class="modal-btn">Fechar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js"></script> </body>
+    <script src="script.js"></script>
+</body>
 </html>
