--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
                 <h1>📚 Dashboard do Professor</h1>
                 <div class="teacher-info">
                     <span id="teacherName">Professor</span>
-                    <button onclick="logout()" class="logout-btn">
-                        <i class="fas fa-sign-out-alt"></i> Sair
-                    </button>
+                    <button onclick="logout()" class="logout-btn"><i class="fas fa-sign-out-alt"></i> Sair</button>
                 </div>
             </div>
             <div class="dashboard-content">
@@ -282,9 +280,10 @@
                                     <label for="createStudentUsername">Usuário:</label>
                                     <input type="text" id="createStudentUsername" required autocomplete="username">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group password-group">
                                     <label for="createStudentPassword">Senha:</label>
                                     <input type="password" id="createStudentPassword" required autocomplete="new-password">
+                                    <button type="button" id="generatePasswordBtn" class="generate-password-btn" title="Gerar senha automática">🪄</button>
                                 </div>
                             </div>
                             <div class="form-actions">
@@ -299,9 +298,7 @@
             <div id="studentProgressTab" class="tab-content">
                 <div class="progress-section">
                     <h4>Relatório de Progresso da Turma</h4>
-                    <div id="studentProgressList" class="students-list">
-                        <p>Carregando progresso...</p>
-                    </div>
+                    <div id="studentProgressList" class="students-list"></div>
                 </div>
             </div>
             <div class="modal-actions">
