--- a/index.html
+++ b/index.html
@@ -131,110 +131,119 @@
     </div>
 
     <div id="startScreen" class="screen">
- 		<div class="container">
- 			<div class="game-title">
- 				<h1>🌟 Jogo das Letras 🌟</h1>
- 				<p>Vamos aprender o alfabeto juntos!</p>
- 			</div>
- 			<div class="character-mascot">
- 				<div class="mascot bounce">
- 					<i class="fas fa-cat"></i>
- 				</div>
- 				<div class="speech-bubble">
- 					<p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
- 				</div>
- 			</div>
- 			<button id="startButton" class="start-button">
- 				<i class="fas fa-play"></i> Começar Aventura
- 			</button>
- 		</div>
- 	</div>
+		<div class="container">
+			<div class="game-title">
+				<h1>🌟 Jogo das Letras 🌟</h1>
+				<p>Vamos aprender o alfabeto juntos!</p>
+			</div>
+			<div class="character-mascot">
+				<div class="mascot bounce">
+					<i class="fas fa-cat"></i>
+				</div>
+				<div class="speech-bubble">
+					<p>Olá! Eu sou o Gatinho Alfabeto! Vamos brincar?</p>
+				</div>
+			</div>
+			<button id="startButton" class="start-button">
+				<i class="fas fa-play"></i> Começar Aventura
+			</button>
+		</div>
+	</div>
 
- 	<div id="gameScreen" class="screen">
- 		<div class="game-header">
- 			<div class="phase-info">
- 				<h2>Fase <span id="currentPhase">1</span></h2>
- 				<div class="progress-bar">
- 					<div id="progressFill" class="progress-fill"></div>
- 				</div>
- 			</div>
- 			<div class="score-info">
- 				<div class="score">
- 					<i class="fas fa-star"></i>
- 					<span id="score">0</span>/<span id="totalQuestions">0</span>
- 				</div>
- 				<div class="attempts">
- 					<i class="fas fa-heart"></i>
- 					<span id="attempts">2</span> tentativas
- 				</div>
- 			</div>
- 		</div>
- 		<div class="game-content">
- 			<div class="question-area">
- 				<div class="mascot-helper">
- 					<div class="mascot pulse">
- 						<i class="fas fa-cat"></i>
- 					</div>
- 					<div class="speech-bubble" id="helperText">
- 						Clique no alto-falante para ouvir o som!
- 					</div>
- 				</div>
- 				<div class="audio-section">
- 					<button id="playAudioButton" class="audio-button">
- 						<i class="fas fa-volume-up"></i>
- 						<span>Ouvir Som</span>
- 					</button>
- 				</div>
- 				<div class="question-text">
- 					<h3 id="questionText">Qual letra faz este som?</h3>
- 				</div>
- 			</div>
- 			<div class="letters-grid" id="lettersGrid"></div>
- 			<div class="game-controls">
- 				<button id="repeatAudio" class="control-button">
- 					<i class="fas fa-redo"></i> Ouvir Novamente
- 				</button>
- 				<button id="nextQuestion" class="control-button" style="display: none;">
- 					<i class="fas fa-arrow-right"></i> Próxima
- 				</button>
- 			</div>
- 		</div>
- 	</div>
+	<div id="gameScreen" class="screen">
+		<div class="game-header">
+			<div class="phase-info">
+				<h2>Fase <span id="currentPhase">1</span></h2>
+				<div class="progress-bar">
+					<div id="progressFill" class="progress-fill"></div>
+				</div>
+			</div>
+			<div class="score-info">
+				<div class="score">
+					<i class="fas fa-star"></i>
+					<span id="score">0</span>/<span id="totalQuestions">0</span>
+				</div>
+				<div class="attempts">
+					<i class="fas fa-heart"></i>
+					<span id="attempts">2</span> tentativas
+				</div>
+			</div>
+		</div>
+		<div class="game-content">
+			<div class="question-area">
+				<div class="mascot-helper">
+					<div class="mascot pulse">
+						<i class="fas fa-cat"></i>
+					</div>
+					<div class="speech-bubble" id="helperText">
+						Clique no alto-falante para ouvir o som!
+					</div>
+				</div>
+                
+                <div class="audio-section" id="audioQuestionArea">
+					<button id="playAudioButton" class="audio-button">
+						<i class="fas fa-volume-up"></i>
+						<span>Ouvir Som</span>
+					</button>
+				</div>
 
- 	<div id="resultScreen" class="screen">
- 		<div class="container">
- 			<div class="result-content">
- 				<div class="result-icon" id="resultIcon">
- 					<i class="fas fa-trophy"></i>
- 				</div>
- 				<h2 id="resultTitle">Parabéns!</h2>
- 				<div class="result-stats">
- 					<div class="stat">
- 						<i class="fas fa-star"></i>
- 						<span>Acertos: <span id="finalScore">0</span></span>
- 					</div>
- 					<div class="stat">
- 						<i class="fas fa-percentage"></i>
- 						<span>Precisão: <span id="accuracy">0</span>%</span>
- 					</div>
- 				</div>
- 				<div class="result-message" id="resultMessage">
- 					Você conseguiu! Continue assim!
- 				</div>
- 				<div class="result-actions">
- 					<button id="continueButton" class="result-button success" style="display: none;">
- 						<i class="fas fa-arrow-right"></i> Próxima Fase
- 					</button>
- 					<button id="retryButton" class="result-button retry" style="display: none;">
- 						<i class="fas fa-redo"></i> Tentar Novamente
- 					</button>
- 					<button id="restartButton" class="result-button">
- 						<i class="fas fa-home"></i> Voltar ao Início
- 					</button>
- 				</div>
- 			</div>
- 		</div>
- 	</div>
+                <div id="imageQuestionArea" style="display: none;">
+                    <div class="image-display">
+                        <span id="imageEmoji" class="image-emoji"></span>
+                    </div>
+                    <h3 id="wordDisplay" class="word-display"></h3>
+                </div>
+
+				<div class="question-text">
+					<h3 id="questionText">Qual letra faz este som?</h3>
+				</div>
+			</div>
+			<div class="letters-grid" id="lettersGrid"></div>
+			<div class="game-controls">
+				<button id="repeatAudio" class="control-button">
+					<i class="fas fa-redo"></i> Ouvir Novamente
+				</button>
+				<button id="nextQuestion" class="control-button" style="display: none;">
+					<i class="fas fa-arrow-right"></i> Próxima
+				</button>
+			</div>
+		</div>
+	</div>
+
+	<div id="resultScreen" class="screen">
+		<div class="container">
+			<div class="result-content">
+				<div class="result-icon" id="resultIcon">
+					<i class="fas fa-trophy"></i>
+				</div>
+				<h2 id="resultTitle">Parabéns!</h2>
+				<div class="result-stats">
+					<div class="stat">
+						<i class="fas fa-star"></i>
+						<span>Acertos: <span id="finalScore">0</span></span>
+					</div>
+					<div class="stat">
+						<i class="fas fa-percentage"></i>
+						<span>Precisão: <span id="accuracy">0</span>%</span>
+					</div>
+				</div>
+				<div class="result-message" id="resultMessage">
+					Você conseguiu! Continue assim!
+				</div>
+				<div class="result-actions">
+					<button id="continueButton" class="result-button success" style="display: none;">
+						<i class="fas fa-arrow-right"></i> Próxima Fase
+					</button>
+					<button id="retryButton" class="result-button retry" style="display: none;">
+						<i class="fas fa-redo"></i> Tentar Novamente
+					</button>
+					<button id="restartButton" class="result-button">
+						<i class="fas fa-home"></i> Voltar ao Início
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
     <div id="globalFeedback" class="feedback">
         <div class="feedback-content">
@@ -310,8 +319,8 @@
         <div class="modal-content large">
             <h3>Gerenciar Áudios das Letras</h3>
             <div class="modal-tabs">
-                <button class="tab-btn active" onclick="showTab('uploadFileTab', this)">Enviar Arquivos</button>
-                <button class="tab-btn" onclick="showTab('recordVoiceTab', this)">Gravar com Microfone</button>
+                <button class="tab-btn active" onclick="showTab('uploadFile', this)">Enviar Arquivos</button>
+                <button class="tab-btn" onclick="showTab('recordVoice', this)">Gravar com Microfone</button>
             </div>
             <div id="uploadFileTab" class="tab-content active">
                 <div class="upload-section">
