--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 		</div>
 	</div>
 
-    <div id="globalFeedback" class="feedback">
+    <div id="globalFeedback">
         <div class="feedback-content">
             <span class="feedback-icon"></span>
             <span class="feedback-text"></span>
@@ -285,7 +285,7 @@
                         <form id="createStudentFormElement">
                             <div class="form-row">
                                 <div class="form-group">
-                                    <label for="createStudentUsername">Usuário:</label>
+                                    <label for="createStudentUsername">Nome do Aluno (usuário):</label>
                                     <input type="text" id="createStudentUsername" required autocomplete="username">
                                 </div>
                                 <div class="form-group password-group">
@@ -319,8 +319,8 @@
         <div class="modal-content large">
             <h3>Gerenciar Áudios das Letras</h3>
             <div class="modal-tabs">
-                <button class="tab-btn active" onclick="showTab('uploadFile', this)">Enviar Arquivos</button>
-                <button class="tab-btn" onclick="showTab('recordVoice', this)">Gravar com Microfone</button>
+                <button class="tab-btn active" onclick="showTab('uploadFileTab', this)">Enviar Arquivos</button>
+                <button class="tab-btn" onclick="showTab('recordVoiceTab', this)">Gravar com Microfone</button>
             </div>
             <div id="uploadFileTab" class="tab-content active">
                 <div class="upload-section">
