--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
         <div class="modal-content large">
             <h3 id="manageClassTitle">Gerenciar Turma</h3>
             <div class="modal-tabs">
-                <button class="tab-btn active" onclick="showTab('students', this)">Alunos</button>
-                <button class="tab-btn" onclick="showTab('studentProgress', this)">Progresso dos Alunos</button>
+                <button class="tab-btn active" onclick="showTab('studentsTab', this)">Alunos</button>
+                <button class="tab-btn" onclick="showTab('studentProgressTab', this)">Progresso dos Alunos</button>
             </div>
             <div id="studentsTab" class="tab-content active">
                 <div class="students-section">
