--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
 					<span id="attempts">2</span> tentativas
 				</div>
 			</div>
+            <div class="game-actions">
+                <button id="exitGameButton" class="exit-button" title="Sair do Jogo">
+                    <i class="fas fa-sign-out-alt"></i> Sair
+                </button>
+            </div>
 		</div>
 		<div class="game-content">
 			<div class="question-area">
